refactor: viewer lifecycle coordination, neutral scripted groups, filter capability framework