@@ -19,7 +19,7 @@ class GroupFilterValidatorTest {
 		List<Component> errors = GroupFilterValidator.validateComponents(new GroupFilter.Id("item", "not a rl"));
 
 		assertEquals(1, errors.size());
-		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.getFirst().getContents());
+		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.get(0).getContents());
 		assertEquals("collapsible_groups.editor.rules.error.invalid_resource_location", contents.getKey());
 		assertEquals("not a rl", contents.getArgs()[0]);
 	}
@@ -42,7 +42,7 @@ class GroupFilterValidatorTest {
 		));
 
 		assertEquals(1, errors.size());
-		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.getFirst().getContents());
+		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.get(0).getContents());
 		assertEquals("collapsible_groups.editor.rules.error.component_path_grammar", contents.getKey());
 		assertEquals("bad path", contents.getArgs()[0]);
 	}
@@ -52,7 +52,7 @@ class GroupFilterValidatorTest {
 		List<Component> errors = GroupFilterValidator.validateComponents(new GroupFilter.ItemPathContains(" "));
 
 		assertEquals(1, errors.size());
-		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.getFirst().getContents());
+		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.get(0).getContents());
 		assertEquals("collapsible_groups.editor.rules.error.missing_value", contents.getKey());
 		assertEquals("item_path_contains", contents.getArgs()[0]);
 	}
@@ -71,7 +71,7 @@ class GroupFilterValidatorTest {
 		List<Component> errors = GroupFilterValidator.validateComponents(new GroupFilter.ExactStack("minecraft:oak_boat"));
 
 		assertEquals(1, errors.size());
-		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.getFirst().getContents());
+		TranslatableContents contents = assertInstanceOf(TranslatableContents.class, errors.get(0).getContents());
 		assertEquals("collapsible_groups.editor.rules.error.exact_stack_invalid", contents.getKey());
 	}
 }
